# stop-discord-phishing

./: .gitignore  README.md  domain_list.json  pyproject.toml
.github/workflows/: publish.yml  sort.yml
stop_discord_phishing/: __init__.py  amount.py  check.py  list.py
